# shrs

./: .gitignore  .gitmodules  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  atom.xml  grammar.lalrpop  index.html  justfile  robots.txt  rustfmt.toml  search_index.en.js  sitemap.xml
crates/shrs/: Cargo.toml
crates/shrs/examples/: conditional_alias.rs  config_file.rs  custom_builtin.rs  default.rs  systems.rs
crates/shrs/src/: lib.rs  plugin.rs  shell.rs
crates/shrs/src/readline/: hooks.rs  line.rs  menu.rs  painter.rs  prompt.rs
crates/shrs_core/: Cargo.toml  README.md
crates/shrs_core/macros/: Cargo.toml
crates/shrs_core/macros/src/: lib.rs
crates/shrs_core/src/: alias.rs  cmd_output.rs  commands.rs  ctx.rs  env.rs  history.rs  hook_ctx.rs  hooks.rs  jobs.rs  keybinding.rs  lang.rs  lib.rs  macros.rs  output_writer.rs  plugin.rs  plugin_meta.rs  prompt.rs  prompt_content_queue.rs  shell.bak.rs  shell.rs  shell_config.rs  signal.rs  state.rs  theme.rs
crates/shrs_core/src/builtin/: alias.rs  cd.rs  debug.rs  exit.rs  export.rs  help.rs  history.rs  jobs.rs  mod.rs  source.rs  type.rs  unalias.rs
crates/shrs_core/src/completion/: completer.rs  data.rs  mod.rs
crates/shrs_core/src/hooks/: events.rs  mod.rs
crates/shrs_core/src/lang/: eval2.rs  mod.rs  posix_lang.rs
crates/shrs_core/src/readline/: abbreviations.rs  buffer_history.rs  highlight.rs  hooks.rs  line.rs  line_events.rs  menu.rs  mod.rs  painter.rs  prompt.rs  snippet.rs  suggester.rs  vi.rs
crates/shrs_example/: Cargo.toml
crates/shrs_example/src/: main.rs
crates/shrs_job/: Cargo.toml  README.md
crates/shrs_job/src/: io.rs  job.rs  process.rs  util.rs
crates/shrs_lang/: Cargo.toml  README.md
crates/shrs_lang/src/: ast.rs  error.rs  eval.rs  eval2.rs  grammar.lalrpop  lang.rs  lexer.rs  lib.rs  parser.rs  process.rs
crates/shrs_line/: Cargo.toml  README.md
crates/shrs_line/src/: buffer_history.rs  cursor.rs  highlight.rs  history.rs  hooks.rs  keybinding.rs  lib.rs  line.rs  menu.rs  painter.rs  prompt.rs  vi.rs
crates/shrs_line/src/completion/: completer.rs  context.rs  data.rs  mod.rs  utils.rs
crates/shrs_utils/: Cargo.toml  README.md
crates/shrs_utils/src/: algo.rs  cursor_buffer.rs  lib.rs  macros.rs  styled_buf.rs
crates/shrs_vi/: Cargo.toml  README.md
crates/shrs_vi/src/: ast.rs  grammar.lalrpop  lib.rs  parser.rs
plugins/shrs_analytics/: Cargo.toml  README.md
plugins/shrs_analytics/examples/: basic.rs
plugins/shrs_analytics/src/: builtin.rs  lib.rs
plugins/shrs_autocd/: Cargo.toml  README.md
plugins/shrs_autocd/examples/: basic.rs
plugins/shrs_autocd/src/: lib.rs
plugins/shrs_cd_stack/: Cargo.toml  README.md
plugins/shrs_cd_stack/examples/: basic.rs
plugins/shrs_cd_stack/src/: lib.rs
plugins/shrs_cd_tools/: Cargo.toml  README.md
plugins/shrs_cd_tools/examples/: basic.rs  git.rs
plugins/shrs_cd_tools/src/: git.rs  lib.rs  node.rs  query.rs  rust.rs
plugins/shrs_command_timer/: Cargo.toml  README.md
plugins/shrs_command_timer/examples/: basic.rs  command_time.rs
plugins/shrs_command_timer/src/: lib.rs
plugins/shrs_completion/: Cargo.toml  README.md
plugins/shrs_completion/examples/: completer.rs
plugins/shrs_completion/rhai_completions/: git.rhai
plugins/shrs_completion/src/: helpers.rs  lib.rs  setup.rs
plugins/shrs_completion/src/completions/: mod.rs  ssh.rs
plugins/shrs_derive_completion/: Cargo.toml  README.md
plugins/shrs_derive_completion/examples/: basic.rs
plugins/shrs_derive_completion/src/: lib.rs
plugins/shrs_derive_completion/tests/: 01-simple.rs  test.rs
plugins/shrs_file_history/: Cargo.toml  README.md
plugins/shrs_file_history/examples/: basic.rs
plugins/shrs_file_history/src/: lib.rs
plugins/shrs_file_logger/: Cargo.toml  README.md
plugins/shrs_file_logger/examples/: basic.rs
plugins/shrs_file_logger/src/: lib.rs
plugins/shrs_insulter/: Cargo.toml
plugins/shrs_insulter/examples/: basic.rs
plugins/shrs_insulter/src/: lib.rs
plugins/shrs_lang_options/: Cargo.toml
plugins/shrs_lang_options/src/: lib.rs
plugins/shrs_manpages/: Cargo.toml  README.md
plugins/shrs_manpages/examples/: basic.rs
plugins/shrs_manpages/src/: lib.rs
plugins/shrs_mux/: Cargo.toml  README.md
plugins/shrs_mux/examples/: basic.rs
plugins/shrs_mux/src/: builtin.rs  highlighter.rs  interpreter.rs  lang.rs  lang_options.rs  lib.rs
plugins/shrs_mux/src/lang/: bash.rs  lang.rs  mod.rs  nu.rs  python.rs  sqlite.rs  ssh.rs
plugins/shrs_mux/src/python/: error_theme.rs  lang.rs  (+3 more)
plugins/shrs_output_capture/: Cargo.toml  README.md
plugins/shrs_output_capture/src/: builtin.rs  lib.rs
shrs/: Cargo.toml  README.md
shrs/examples/: conditional_alias.rs  config.ron  config_file.rs
shrs/src/: alias.rs  env.rs  hooks.rs  jobs.rs  lib.rs  logger.rs  plugin.rs  process_timer.rs  prompt.rs  shell.rs  state.rs
shrs/src/builtin/: alias.rs  cd.rs  debug.rs  exit.rs  help.rs  history.rs  jobs.rs  mod.rs  source.rs  unalias.rs
shrs_core/: Cargo.toml
shrs_core/src/: alias.rs  hooks.rs  jobs.rs  lib.rs  shell.rs  signal.rs  state.rs  theme.rs
shrs_core/src/builtin/: alias.rs  cd.rs  debug.rs  exit.rs  export.rs  help.rs  history.rs  jobs.rs  mod.rs  source.rs  unalias.rs
shrs_example/: Cargo.toml  README.md  build.rs
shrs_example/src/: main.rs
shrs_lang/: Cargo.toml
shrs_lang/examples/: basic.rs
shrs_lang/src/: ast.rs  eval.rs  eval2.rs  grammar.lalrpop  lang.rs  lexer.rs  lib.rs  parser.rs  process.rs
shrs_lang/src/job_control/: io.rs  job.rs  mod.rs  process.rs
shrs_line/: Cargo.toml
shrs_line/examples/: testing.rs
shrs_line/src/: buffer_history.rs  completion.rs  cursor.rs  cursor_buffer.rs  highlight.rs  history.rs  keybinding.rs  lib.rs  line.rs  menu.rs  painter.rs  prompt.rs  vi.rs
shrs_line/src/completion/: better_completer.rs  completer.rs  context.rs  default_completer.rs  engine.rs  mod.rs  utils.rs
shrs_os/: Cargo.toml
shrs_os/src/: lib.rs  process.rs  shell.rs
shrs_vi/: Cargo.toml  README.md
shrs_vi/src/: ast.rs  grammar.lalrpop  lib.rs  parser.rs
(+241 files in other folders)
