[workspace]
members = [
    "shrs",
    "shrs_core",
    "shrs_line",
    "shrs_lang",
    "shrs_example",
    "shrs_vi",
    "shrs_utils",
    "shrs_os",
    "plugins/shrs_output_capture",
    "plugins/shrs_cd_tools",
    "plugins/shrs_command_timer",
    "plugins/shrs_derive_completion",
    "plugins/shrs_run_context",
    "plugins/shrs_mux",
]
