[package]
name = "shrs"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "modular library to build your own shell in rust"
homepage = "https://mrpicklepinosaur.github.io/shrs/"
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["shell", "posix", "unix"]
readme = "README.md"
repository = "https://github.com/MrPicklePinosaur/shrs"

[workspace]
members = [
    "shrs_example",
    "crates/shrs_core",
    "crates/shrs_line",
    "crates/shrs_lang",
    "crates/shrs_vi",
    "crates/shrs_utils",
    "crates/shrs_job",
    "plugins/shrs_output_capture",
    "plugins/shrs_cd_tools",
    "plugins/shrs_command_timer",
    "plugins/shrs_derive_completion",
    "plugins/shrs_run_context",
    "plugins/shrs_mux",
    "plugins/shrs_insulter"
]

[features]
default = []

[dependencies]
regex = "1"
signal-hook = "0.3"
crossbeam-channel = "0.5"
clap = { version = "4.1", features = ["derive"] }
crossterm = "0.26"
derive_builder = "0.12"
dirs = "5"

pino_deref = "0.1"

thiserror = "1"
anyhow = "1"
lazy_static = "1.4"

shrs_core = { path = "crates/shrs_core" }
shrs_line = { path = "crates/shrs_line" }
shrs_lang = { path = "crates/shrs_lang" }
shrs_job = { path = "crates/shrs_job" }

[dev-dependencies]
rexpect = "0.5"

ron = "0.8"
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5" }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[[bench]]
name = "bench"
harness = false

