[workspace]
members = [
    "shrs_example",
    "crates/*",
    "plugins/*",
]
resolver = "2"

[workspace.package]
authors = ["MrPicklePinosaur"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "modular library to build your own shell in rust"
edition = "2021"
homepage = "https://mrpicklepinosaur.github.io/shrs/"
keywords = ["shrs", "shell", "posix", "unix"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MrPicklePinosaur/shrs"
