[package]
name = "shrs_example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "example shell built using shrs"
repository = "https://github.com/MrPicklePinosaur/sh.rs"
build = "build.rs"

[dependencies]
shrs = { path = "../shrs" }
shrs_output_capture = { path = "../plugins/shrs_output_capture" }
dirs = "5"
anyhow = "1"
crossterm = "0.26"

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "shrs_example"
path = "src/main.rs"
