[package]
name = "shrs_example"
version = "0.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "example shell built using shrs"
repository = "https://github.com/MrPicklePinosaur/shrs"
build = "build.rs"

[dependencies]
shrs = { path = "../crates/shrs", version = "^0.0.4" }
shrs_output_capture = { path = "../plugins/shrs_output_capture", version = "0.0.4" }
shrs_cd_tools = { path = "../plugins/shrs_cd_tools", version = "0.0.4" }
shrs_command_timer = { path = "../plugins/shrs_command_timer", version = "0.0.4" }
shrs_run_context = { path = "../plugins/shrs_run_context", version = "0.0.4" }
shrs_mux = { path = "../plugins/shrs_mux", version = "0.0.4" }
shrs_cd_stack = { path = "../plugins/shrs_cd_stack", version = "0.0.4" }
shrs_file_logger = { path = "../plugins/shrs_file_logger", version = "0.0.4" }
shrs_rhai = { path = "../plugins/shrs_rhai", version = "0.0.4" }
shrs_rhai_completion = { path = "../plugins/shrs_rhai_completion", version = "0.0.4" }

dirs = "5"
anyhow = "1"
crossterm = "0.26"

log = "0.4"
env_logger = "0.10"

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "shrs_example"
