[package]
name = "shrs_lang"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "parser and lexer for shrs posix shell"
repository = "https://github.com/MrPicklePinosaur/shrs"
build = "build.rs"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"

pino_deref = "0.1"

lazy_static = "1.4"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
rexpect = "0.5"

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }
