[package]
name = "shrs_line"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "readline implementation"
repository = "https://github.com/MrPicklePinosaur/sh.rs"

[dependencies]
crossterm = "0.26"
trie-rs = "0.1"
derive_builder = "0.12"
ropey = "1.6"
dirs = "5"

anyhow = "1"
thiserror = "1"

shrs_vi = { path = "../shrs_vi" }
