[package]
name = "shrs_os"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "abstraction level to os related functions"
repository = "https://github.com/MrPicklePinosaur/shrs"

[dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "term", "process", "signal"]}

thiserror = "1"
anyhow = "1"
