[package]
name = "shrs"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "modular library to build your own shell in rust"
homepage = "https://mrpicklepinosaur.github.io/shrs/"
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["shrs", "shell", "posix", "unix"]
readme = "README.md"
repository = "https://github.com/shellrs/shrs"

[features]
default = ["serde"]
serde = ["dep:serde", "shrs_core/serde"]

[dependencies]
regex = "1"
signal-hook = "0.3"
clap = { version = "4.1", features = ["derive"] }
crossterm = "0.26"
derive_builder = "0.12"
dirs = "5"

pino_deref = "0.1"

thiserror = "1"
anyhow = "1"
lazy_static = "1.4"
log = "0.4"

shrs_core = { path = "../shrs_core", version = "0.0.1-dev" }
shrs_line = { path = "../shrs_line", version = "0.0.1-dev" }
shrs_lang = { path = "../shrs_lang", version = "0.0.1-dev" }
shrs_job = { path = "../shrs_job", version = "0.0.1-dev" }

serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rexpect = "0.5"

ron = "0.8"
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5" }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[[bench]]
name = "bench"
harness = false

