[package]
name = "shrs_core"
version = "0.0.5"
description = "modular library to build your own shell in rust"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
regex = "1"
signal-hook = "0.3"
clap = { version = "4.1", features = ["derive"] }
nix = { version = "0.26", default-features = false, features = [
    "fs",
    "term",
    "process",
    "signal",
] }
crossterm = "0.26"
derive_builder = "0.12"
dirs = "5"
anymap = "1.0.0-beta.2"
multimap = "0.9"
skim = "0.10.4"
glob = "0.3.1"


shrs_job = { path = "../shrs_job", version = "^0.0.5" }
shrs_utils = { path = "../shrs_utils", version = "^0.0.5" }
shrs_lang = { path = "../shrs_lang", version = "^0.0.5" }
shrs_vi = { path = "../shrs_vi", version = "^0.0.5" }
shrs_core_macros = { path = "macros", version = "0.1" }


pino_deref = "0.1"

log = "0.4"
thiserror = "1"
anyhow = "1"
lazy_static = "1.4"

serde = { version = "1", features = ["derive"], optional = true }
trie-rs = "0.1"
unicode-width = "0.1"
arboard = "3.2.0"
tempfile = "3.9"


[dev-dependencies]
rexpect = "0.5"
