[package]
name = "shrs_example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "example shell built using shrs"
repository = "https://github.com/MrPicklePinosaur/sh.rs"
build = "build.rs"

[dependencies]
shrs = { path = "../../" }
shrs_output_capture = { path = "../../plugins/shrs_output_capture" }
shrs_cd_tools = { path = "../../plugins/shrs_cd_tools" }
shrs_command_timer = { path = "../../plugins/shrs_command_timer" }
shrs_run_context = { path = "../../plugins/shrs_run_context" }
shrs_mux = { path = "../../plugins/shrs_mux" }
shrs_insulter = { path = "../../plugins/shrs_insulter"}

dirs = "5"
anyhow = "1"
crossterm = "0.26"

log = "0.4"
env_logger = "0.10"

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "shrs_example"
path = "src/main.rs"

[profile.release]
debug = true
