[package]
name = "shrs_job"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "utilities for managing jobs and processes"
repository = "https://github.com/MrPicklePinosaur/shrs"

[dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "term", "process", "signal"]}

lazy_static = "1.4"
thiserror = "1"
anyhow = "1"
log = "0.4"
