[package]
name = "shrs_job"
version = "0.0.2"
description = "utilities for managing jobs and processes"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "term", "process", "signal"]}

lazy_static = "1.4"
thiserror = "1"
anyhow = "1"
log = "0.4"
