[package]
name = "shrs_lang"
version = "0.0.3"
description = "parser and lexer for shrs posix shell"
build = "build.rs"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs_core = { path = "../shrs_core", version = "^0.0.3" }
shrs_job = { path = "../shrs_job", version = "^0.0.3" }
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"
nix = { version = "0.26", default-features = false, features = ["fs", "term", "process", "signal"]}

pino_deref = "0.1"

lazy_static = "1.4"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
rexpect = "0.5"

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }
