[package]
name = "shrs_line"
version = "0.0.1-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "readline implementation"
repository = "https://github.com/shellrs/shrs"

[dependencies]
crossterm = {version = "0.26", features = ["bracketed-paste"]}
trie-rs = "0.1"
derive_builder = "0.12"
dirs = "5"
unicode-width = "0.1"
arboard = "3.2.0"

anyhow = "1"
thiserror = "1"
shrs_core = { path = "../shrs_core", version = "0.0.1-dev" }
shrs_vi = { path = "../shrs_vi", version = "0.0.1-dev" }
shrs_utils = { path = "../shrs_utils", version = "0.0.1-dev" }
shrs_lang = {path = "../shrs_lang", version = "0.0.1-dev" }
# shrs_core = { path = "../shrs_utils" }
