[package]
name = "shrs_line"
version = "0.0.2"
description = "readline implementation"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossterm = {version = "0.26", features = ["bracketed-paste"]}
trie-rs = "0.1"
derive_builder = "0.12"
dirs = "5"
unicode-width = "0.1"
arboard = "3.2.0"

anyhow = "1"
thiserror = "1"
shrs_core = { path = "../shrs_core", version = "^0.0.2" }
shrs_vi = { path = "../shrs_vi", version = "^0.0.2" }
shrs_utils = { path = "../shrs_utils", version = "^0.0.2" }
shrs_lang = {path = "../shrs_lang", version = "^0.0.2" }
# shrs_core = { path = "../shrs_utils" }
