[package]
name = "shrs_utils"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "common utilities for shrs"
repository = "https://github.com/MrPicklePinosaur/sh.rs"

[dependencies]
crossterm = "0.26"
derive_builder = "0.12"
ropey = "1.6"

anyhow = "1"
thiserror = "1"
