[package]
name = "shrs_utils"
version = "0.0.2"
description = "utilities for shrs"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossterm = "0.26"
derive_builder = "0.12"
ropey = "1.6"

anyhow = "1"
thiserror = "1"
