[package]
name = "shrs_vi"
version = "0.0.5"
description = "parser for vi like commands"
build = "build.rs"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"

thiserror = "1"
anyhow = "1"

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }
