[package]
name = "shrs_analytics"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = ""
homepage = "https://mrpicklepinosaur.github.io/shrs/"
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["shrs", "shell", "posix", "unix"]
readme = "README.md"
repository = "https://github.com/MrPicklePinosaur/shrs"

[dependencies]
shrs = { path = "../../crates/shrs", version = "0.0.6" }
