[package]
name = "shrs_cd_stack"
version = "0.0.4"
description = "maintain stack of past working directories"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "^0.0.4" }
