[package]
name = "shrs_cd_tools"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "Variety of utilities for running commands conditionally on directory change"
repository = "https://github.com/MrPicklePinosaur/sh.rs"

[dependencies]
shrs = { path = "../../shrs" }

derive_builder = "0.12"

thiserror = "1"
