[package]
name = "shrs_cd_tools"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "Variety of utilities for running commands conditionally on directory change"
repository = "https://github.com/MrPicklePinosaur/sh.rs"

[dependencies]
shrs = { path = "../../", version = "0.0.1" }

derive_builder = "0.12"
anymap = "0.12"
multimap = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.7" }

thiserror = "1"
