[package]
name = "shrs_cd_tools"
version = "0.0.5"
description = "Variety of utilities for running commands conditionally on directory change"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "^0.0.5" }

derive_builder = "0.12"
anymap = "0.12"
multimap = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.7" }

thiserror = "1"
