[package]
name = "shrs_command_timer"
version = "0.0.5"
description = "shrs plugin to time how long the previous command took to run"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "^0.0.5" }
