[package]
name = "shrs_completion"
version = "0.0.4"
description = "More completions for shrs"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "^0.0.4" }
shrs_rhai = { path = "../shrs_rhai", version = "^0.0.4" }

ssh2-config = { version = "0.2.3" }
dirs = { version = "5.0" }

thiserror = "1"
anyhow = "1"
rhai = { version = "1.16" }

