[package]
name = "shrs_derive_completion"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "Specify shell completions from derive macro"
repository = "https://github.com/MrPicklePinosaur/shrs"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
shrs = { path = "../../crates/shrs", version = "0.0.2" }

derive_builder = "0.12"

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2= "1"

thiserror = "1"

[dev-dependencies]
trybuild = "1.0"
