[package]
name = "shrs_file_logger"
version = "0.0.4"
description = ""
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "^0.0.4" }

log4rs = { version = "1.2" }
log = { version = "0.4" }
