[package]
name = "shrs_lang_options"
version = "0.0.2"
description = ""
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "0.0.2" }
shrs_mux = {path = "../shrs_mux/", version = "0.0.2"}

