[package]
name = "shrs_mux"
version = "0.0.3"
description = "shell language multiplexer"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "^0.0.3" }
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
ssh2 = { version = "0.9" }
