[package]
name = "shrs_mux"
version = "0.0.4"
description = "shell language multiplexer"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "^0.0.4" }
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
openssh = { version = "0.10.3" }
crossterm = "0.26"
rustpython-parser = "0.3.1"
regex = "1.10.4"
lazy_static = "1.4.0"
