[package]
name = "shrs_output_capture"
version = "0.0.2"
description = "Capture the previous stdout and stderr output"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shrs = { path = "../../crates/shrs", version = "0.0.2" }
